2002-06-21  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/: Updated man pages.
	
	* test/: Updated test suite.
	
	* libsmi-0.4.tar.gz: released version 0.4. There are two major
	improvements in this release: It is the first release that
	supports parsing and dumping of SPPI PIB modules (thanks to
	Moritz for this great piece of good work!). Additionally the
	support of an XML Schema dump format (smidump -f xsd) has
	received a lot of enhancements, which might be of interest to
	some people (thanks to Torsten for his great former and
	ongoing work on all the details of this topic!).

2002-06-19  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/data.c: Fixed illegal reference to already freed type
	structs in smiFreeData(). Thanks to Nick.

	* lib/parser-smi.h: Added a check for mismatching tables'
	SEQUENCE OF types and row types. Thanks to Mike.

2002-06-14  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
	
	* mibs/ietf/GSMP-MIB: added (RFC 3295).

2002-06-10  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
	
	* lib/smi.c: call smiInit() in smiSetPath() if not yet initialized.
	Thanks to Yogeshwara.

2002-06-08  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/DIFFSERV-MIB,DIFFSERV-DSCP-TC: added (RFC 3289).

2002-05-29  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/data.c: Fixed lost named numbers in case of forward
	referenced TCs and type assignments.

2002-05-25  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/HDSL2-SHDSL-LINE-MIB: added (RFC 3276).

2002-05-25  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* win/*: Patches from Erik to ease W32 support.

2002-05-18  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/INET-ADDRESS-MIB: updated (RFC 3291).

2002-05-17  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/data.c: Fixed nodekind for iso, ccitt, and joint-iso-ccitt.
	Thanks to Mark Kaplun.

	* mibs/ietf/INET-ADDRESS-MIB: updated to the new version
	which is expected to be published as RFC rsn.
